<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.Signin">

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/constraintLayout" android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email_field"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="129dp" app:layout_constraintEnd_toEndOf="parent"
                android:hint="@string/email_text_field"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/pasword_field"
                android:layout_marginTop="34dp" app:layout_constraintTop_toBottomOf="@+id/email_field"
                android:layout_marginEnd="1dp"
                app:layout_constraintEnd_toEndOf="@+id/email_field" android:hint="@string/password_text_field"/>
        <Button
                android:text="@string/signin_button"
                android:layout_width="163dp"
                android:layout_height="45dp"
                android:id="@+id/signin_button"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/pasword_field" app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/signin_tittle_text"
                android:layout_width="179dp"
                android:layout_height="34dp"
                android:id="@+id/Signin_tittle"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="311dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/register_suggestion"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="49dp"
                android:gravity="center_vertical|center_horizontal" android:textSize="24sp"/>
        <TextView
                android:text="@string/register_suggestion"
                android:layout_width="243dp"
                android:layout_height="27dp"
                android:id="@+id/register_suggestion"
                android:clickable="@string/trueValue"
                android:onClick="redirectToRegister"
                app:layout_constraintTop_toBottomOf="@+id/Signin_tittle" android:layout_marginBottom="78dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:gravity="center_vertical|center_horizontal"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>