<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".authentication.Signup">

    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/constraintLayout2"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp">

        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/username_field"
                android:hint="@string/username_text_field" app:layout_constraintTop_toBottomOf="@+id/register_tittle"
                android:layout_marginBottom="10dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/email_field" app:layout_constraintStart_toStartOf="parent"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/email_field"
                android:gravity="center_vertical" android:inputType="textEmailAddress"
                android:hint="@string/email_text_field" app:layout_constraintStart_toStartOf="@+id/username_field"
                app:layout_constraintTop_toBottomOf="@+id/username_field" android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/password_field"
        />
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/password_field" android:hint="@string/password_text_field"
                app:layout_constraintStart_toStartOf="@+id/email_field"
                app:layout_constraintTop_toBottomOf="@+id/email_field" android:layout_marginBottom="27dp"
                app:layout_constraintBottom_toTopOf="@+id/register_button"/>
        <Button
                android:text="@string/button_text"
                android:layout_width="146dp"
                android:layout_height="49dp"
                android:id="@+id/register_button"
                app:layout_constraintTop_toBottomOf="@+id/password_field" android:layout_marginBottom="127dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
                android:text="@string/register_tittle_text"
                android:layout_width="173dp"
                android:layout_height="0dp"
                android:id="@+id/register_tittle"
                android:gravity="center_vertical|center_horizontal" android:textSize="24sp"
                android:layout_marginTop="55dp" android:layout_marginBottom="292dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/signin_suggestion"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintVertical_chainStyle="spread"/>
        <TextView
                android:text="@string/signin_suggestion"
                android:layout_width="230dp"
                android:layout_height="30dp"
                android:id="@+id/signin_suggestion"
                android:clickable="@string/trueValue"
                android:onClick="redirectToSignin"
                app:layout_constraintTop_toBottomOf="@+id/register_tittle" android:layout_marginBottom="77dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:gravity="center_vertical|center_horizontal"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>